--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -32,6 +32,7 @@
 
 .app:not(.active) {
   border: 1px solid #ccc !important;
+  overflow: hidden;
 }
 
 .app:not(.active).beveled {
@@ -51,9 +52,6 @@
   cursor: pointer;
 }
 
-.app:not(.active) > .app-header {
-  border-radius: inherit;
-}
 .app:not(.active) > .app-header.app-icon {
   text-align: center;
   vertical-align: bottom;
