--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@
 .carousel.slide-show, 
 .carousel.slide-show > .carousel-inner, 
 .carousel.slide-show > .carousel-inner >.item {
-	height 100%;
+	height: 100%;
 }
 .bg-lion{
     background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);
