--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -32,7 +32,6 @@
 
 .app:not(.active) {
   border: 1px solid #ccc !important;
-  overflow: hidden;
 }
 
 .app:not(.active).beveled {
@@ -51,7 +50,9 @@
 .app.active .app-close {
   cursor: pointer;
 }
-
+.app:not(.active) > .app-header {
+  overflow: hidden;
+}
 .app:not(.active) > .app-header.app-icon {
   text-align: center;
   vertical-align: bottom;
