--- a/_sass/AppFlow.scss
+++ b/_sass/AppFlow.scss
@@ -50,6 +50,7 @@
 }
 .app:not(.active) > .app-header {
   overflow: hidden;
+  border-radius: inherit;
 }
 .app:not(.active) > .app-header.app-icon {
   text-align: center;
