--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -52,6 +52,7 @@
 }
 .app:not(.active) > .app-header {
   overflow: hidden;
+  border-radius: inherit;
 }
 .app:not(.active) > .app-header.app-icon {
   text-align: center;
