--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,9 @@
 	height: 100%;
 	overflow: hidden;
 }
+.app:not(.active){
+	overflow: hidden;
+}
 .bg-lion{
     background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);
     background-repeat: no-repeat;
