--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,8 @@
 	overflow: hidden;
 }
 .bg-lion{
-    background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);
+    /*background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);*/
+	background-image: #000;
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
