--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@
 }
 .bg-lion{
     /*background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);*/
-	background-image: #000;
+	background: rgb(255,255,255);
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
