--- a/css/styles.css
+++ b/css/styles.css
@@ -51,20 +51,12 @@
 }
 .carousel.slide-show, 
 .carousel.slide-show > .carousel-inner,
-.carousel.slide-show > div,
 .carousel.slide-show > .carousel-inner >.item,
-.carousel.slide-show > .carousel-inner > div,
-.carousel.slide-show > div >.item,
-.carousel.slide-show > div > div{
+.carousel.slide-show > .carousel-inner > .item >div{
 	height: 100%;
 	overflow: hidden;
 }
-.pos-static{
-	position: static;
-}
-.app:not(.active) > .app-header {
-	position:relative;
-}
+
 .bg-lion{
     /*background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);*/
 	background: rgb(255,255,255);
