--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,8 @@
 }
 .carousel.slide-show, 
 .carousel.slide-show > .carousel-inner,
-.carousel.slide-show > .carousel-inner >.item{
+.carousel.slide-show > .carousel-inner >.item,
+.carousel.slide-show > .carousel-inner >.item > div{
 	height: 100%;
 	overflow: hidden;
 }
@@ -67,8 +68,7 @@ z-index: 1000;
 }
 
 .bg-lion{
-    /*background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);*/
-	background: rgb(255,255,255);
+    background-image: url(https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
