--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -145,11 +145,24 @@
 
 .app-tray.app-open > .app:not(.active) {
   /*display: none;*/
-   width: 0;
-    height: 0;
-    visibility: hidden;
+    animation: leaves 400ms ease-in-out infinite alternate;
+    -webkit-animation: leaves 400ms ease-in-out infinite alternate;
+   
     opacity: 0;
 }
+@keyframe hiding {
+    0% {
+        transform: scale(1.0, 1.0);
+        -webkit-transform: scale(1.0, 1.0);
+       opacity: 1;
+    }
+    100% {
+        transform: scale(0.1, 0.1);
+        -webkit-transform: scale(0.1, 0.1);
+       opacity: 0;
+    }
+}
+
 .app-tray.app-open.hide-inactive > .app:not(.active) {
     display: none;
 }
