--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -152,13 +152,13 @@
 }
 @keyframe hiding {
     0% {
-        transform: scale(1.0, 1.0);
-        -webkit-transform: scale(1.0, 1.0);
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
        opacity: 1;
     }
     100% {
-        transform: scale(0.1, 0.1);
-        -webkit-transform: scale(0.1, 0.1);
+        transform: scale(0.1);
+        -webkit-transform: scale(0.1);
        opacity: 0;
     }
 }
