--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -150,7 +150,7 @@
    
     opacity: 0;
 }
-@keyframe hiding {
+@keyframes hiding {
     0% {
         transform: scale(1.0);
         -webkit-transform: scale(1.0);
