--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -109,12 +109,16 @@
 .app.active > .app-header,
 .app.active > .app-title,
 .app:not(.active) > .app-content {
-  display: none;
+  /*display: none;*/
+    animation: zoomout 400ms ease-in-out;
+    -webkit-animation: zoomout 400ms ease-in-out;
 }
 
 .app.active > .app-content {
   width: 100%;
   height: 100%;
+    animation: zoomin 400ms ease-in-out;
+    -webkit-animation: zoomin 400ms ease-in-out;
 }
 
 .app-tray,
