--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -114,6 +114,12 @@
     -webkit-animation: zoomout 400ms ease-in-out;
 }
 
+app-tray.app-open.hide-inative > .app.active > .app-header,
+app-tray.app-open.hide-inative > .app.active > .app-title,
+app-tray.app-open.hide-inative > .app:not(.active) > .app-content {
+  display: none;
+}
+
 .app.active > .app-content {
   width: 100%;
   height: 100%;
