--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -108,7 +108,7 @@
 
 .app.active > .app-header,
 .app.active > .app-title,
-.app:not(.active) > .app-content 
+.app:not(.active) > .app-content, 
 .app:not(.active) > .app-content *{
   /*display: none;*/
     animation: zoomout 400ms ease-in-out;
