--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -116,6 +116,12 @@
     width: 0;
     height: 0;
 }
+.app.active > .app-header,
+.app.active > .app-title,
+.app:not(.active).app-closed > .app-content, 
+.app:not(.active).app-closed > .app-content *{
+  display: none;
+}
 
 
 
