--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -110,9 +110,7 @@
 .app.active > .app-title,
 .app:not(.active) > .app-content, 
 .app:not(.active) > .app-content *{
-  /*display: none;*/
-    animation: zoomout 400ms ease-in-out;
-    -webkit-animation: zoomout 400ms ease-in-out;
+    opacity: 0;
     width: 0;
     height: 0;
 }
@@ -128,8 +126,6 @@
 .app.active > .app-content {
   width: 100%;
   height: 100%;
-    animation: zoomin 400ms ease-in-out;
-    -webkit-animation: zoomin 400ms ease-in-out;
 }
 
 .app-tray,
@@ -159,25 +155,10 @@
 }
 
 .app-tray.app-open > .app:not(.active) {
-  /*display: none;*/
-    animation: zoomout 400ms ease-in-out;
-    -webkit-animation: zoomout 400ms ease-in-out;
-   
+    height: 0;
+    width: 0;
+    opacity: 0; 
 }
-@keyframes hiding {
-    0% {
-        transform: scale(1.0);
-        -webkit-transform: scale(1.0);
-       opacity: 1;
-    }
-    100% {
-        transform: scale(0.1);
-        -webkit-transform: scale(0.1);
-       opacity: 0;
-    }
-}
-@keyframes zoomin{from{transform:scale(0)} to{transform:scale(1)}}
-@keyframes zoomout{from{transform:scale(1);} to{transform:scale(0)}}
 
 .app-tray.app-open.hide-inactive > .app:not(.active) {
     display: none;
