--- a/_sass/AppFlow.scss
+++ b/_sass/AppFlow.scss
@@ -1,12 +1,119 @@
-.tray-wrapper {
-    height: auto;
-    position: relative;
+@keyframes slide-in-left{
+    100% { left: 0; }
 }
-.tray-wrapper:not(.auto-resize) {
-    overflow-y: auto;
+@-webkit-keyframes slide-in-left{
+    100% { left: 0; }
 }
-.tray-wrapper > .app-tray.app-open {
+@-moz-keyframes slide-in-left{
+    100% { left: 0; }
+}
+@-o-keyframes slide-in-left{
+    100% { left: 0; }
+}
+@-ms-keyframes slide-in-left{
+    100% { left: 0; }
+}
+
+@keyframes slide-out-left{
+    100% {left: -100%; }
+}
+@-webkit-keyframes slide-out-left{
+    100% {left: -100%; }
+}
+@-moz-keyframes slide-out-left{
+    100% {left: -100%; }
+}
+@-o-keyframes slide-out-left{
+    100% {left: -100%; }
+}
+@-ms-keyframes slide-out-left{
+    100% {left: -100%; }
+}
+
+@keyframes slide-in-right{
+    100% { left: 0; }
+}
+@-webkit-keyframes slide-in-right{
+    100% { left: 0; }
+}
+@-moz-keyframes slide-in-right{
+    100% { left: 0; }
+}
+@-o-keyframes slide-in-right{
+    100% { left: 0; }
+}
+@-ms-keyframes slide-in-right{
+    100% { left: 0; }
+}
+
+@keyframes slide-out-right{
+    100% { left: 100%; }
+}
+@-webkit-keyframes slide-out-right{
+    100% { left: 100%; }
+}
+@-moz-keyframes slide-out-right{
+    100% { left: 100%; }
+}
+@-o-keyframes slide-out-right{
+    100% { left: 100%; }
+}
+@-ms-keyframes slide-out-right{
+    100% { left: 100%; }
+}
+
+.slide-in-left{
+    left: -100%;
     position: absolute;
+    height: 100%;
+    -webkit-animation: slide-in-left 400ms forwards;
+    -moz-animation: slide-in-left 400ms forwards;
+    -o-animation: slide-in-left 400ms forwards;
+    -ms-animation: slide-in-left 400ms forwards;
+    animation: slide-in-left 400ms forwards;
+}
+.slide-out-left{
+    left: 0;
+    position: absolute;
+    height: 100%;
+    -webkit-animation: slide-out-left 400ms forwards;
+    -moz-animation: slide-out-left 400ms forwards;
+    -o-animation: slide-out-left 400ms forwards;
+    -ms-animation: slide-out-left 400ms forwards;
+    animation: slide-out-left 400ms forwards;
+}
+.slide-in-right{
+    left: 100%;
+    position: absolute;
+    height: 100%;
+    -webkit-animation: slide-in-right 400ms forwards;
+    -moz-animation: slide-in-right 400ms forwards;
+    -o-animation: slide-in-right 400ms forwards;
+    -ms-animation: slide-in-right 400ms forwards;
+    animation: slide-in-right 400ms forwards;
+}
+.slide-out-right{
+    left: 0;
+    position: absolute;
+    height: 100%;
+    -webkit-animation: slide-out-right 400ms forwards;
+    -moz-animation: slide-out-right 400ms forwards;
+    -o-animation: slide-out-right 400ms forwards;
+    -ms-animation: slide-out-right 400ms forwards;
+    animation: slide-out-right 400ms forwards;
+}
+.tray-wrapper {
+  height: auto;
+  position: relative;
+}
+
+.tray-wrapper:not(.auto-resize) {
+  overflow-y: auto;
+}
+
+.tray-wrapper > .app-tray.app-open {
+  position: absolute;
+    
 }
 
 .app-tray {
@@ -42,16 +149,26 @@
 
 .app:not(.active).app-square {
   border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  -o-border-radius: 0 !important;
+  -ms-border-radius: 0 !important;
 }
 
 .app:not(.active),
 .app.active .app-close {
   cursor: pointer;
 }
+
 .app:not(.active) > .app-header {
   overflow: hidden;
   border-radius: inherit;
+  -webkit-border-radius: inherit;
+  -moz-border-radius: inherit;
+  -o-border-radius: inherit;
+  -ms-border-radius: inherit;
 }
+
 .app:not(.active) > .app-header.app-icon {
   text-align: center;
   vertical-align: bottom;
@@ -63,6 +180,7 @@
 
 .app-tray.app-open {
   min-height: 100%;
+    flex-wrap: nowrap;
 }
 
 .app-tray:not(.app-open) {
@@ -98,9 +216,20 @@
 
 .app.active > .app-header,
 .app.active > .app-title,
-.app:not(.active) > .app-content {
+.app:not(.active) > .app-content, 
+.app:not(.active) > .app-content *{
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.app.active > .app-header,
+.app.active > .app-title,
+.app:not(.active).app-closed > .app-content, 
+.app:not(.active).app-closed > .app-content *{
   display: none;
 }
+
+
 
 .app.active > .app-content {
   width: 100%;
@@ -113,16 +242,20 @@
 .app-tray > .app > [class^="app-alert"],
 .app-tray > .app > .app-header,
 .app-tray > .app > .app-content,
-.app-tray > .app > .app-title{
+.app-tray > .app > .app-title {
   -webkit-transition: 400ms;
   -moz-transition: 400ms;
   -o-transition: 400ms;
+  -ms-transition: 400ms;
   transition: 400ms;
 }
 
-
 .app.active {
   border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  -o-border-radius: 0 !important;
+  -ms-border-radius: 0 !important;
   width: 100%;
   opacity: 1;
 }
@@ -132,45 +265,61 @@
 }
 
 .app-tray.app-open > .app:not(.active) {
+    height: 0;
+    width: 0;
+    opacity: 0; 
+}
+
+.app-tray.app-open.hide-inactive > .app:not(.active) {
+    display: none;
+}
+
+.app-tray:not(.app-open) > .app:not(.active) > [class^="app-alert"] {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.app-tray.app-open > .app.active > [class^="app-alert"] {
   display: none;
 }
 
-.app-tray:not(.app-open) > .app:not(.active) > [class^="app-alert"]{
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-}
-.app-tray.app-open > .app.active > [class^="app-alert"]{
-    display: none;
-}
 .app-alert,
-.app-alert-tr{
-    right: -5px;
-    top: -5px;
-    >*:first-child{
-        float: right;
-    }
+.app-alert-tr {
+  right: -5px;
+  top: -5px;
 }
-.app-alert-tl{
-    left: -5px;
-    top: -5px;
-    >*:first-child{
-        float: left;
-    }
+
+.app-alert > *:first-child,
+.app-alert-tr > *:first-child {
+  float: right;
 }
-.app-alert-bl{
-    left: -5px;
-    bottom: -5px;
-    >*:first-child{
-        float: left;
-    }
+
+.app-alert-tl {
+  left: -5px;
+  top: -5px;
 }
-.app-alert-br{
-    right: -5px;
-    bottom: -5px;
-    >*:first-child{
-        float: right;
-    }
+
+.app-alert-tl > *:first-child {
+  float: left;
+}
+
+.app-alert-bl {
+  left: -5px;
+  bottom: -5px;
+}
+
+.app-alert-bl > *:first-child {
+  float: left;
+}
+
+.app-alert-br {
+  right: -5px;
+  bottom: -5px;
+}
+
+.app-alert-br > *:first-child {
+  float: right;
 }
 
 $app-span-list: 2 3 4 5;
@@ -252,6 +401,10 @@ $default-glass-border-radius : nth($glass-border-radius-list, 4);
              min-width: $length-value + px; 
              min-height: $length-value + px; 
              border-radius: $app-border-radius + px;
+             -webkit-border-radius: $app-border-radius + px;
+             -moz-border-radius: $app-border-radius + px;
+             -o-border-radius: $app-border-radius + px;
+             -ms-border-radius: $app-border-radius + px;
          }
          .app-tray:not(.app-open).app-size-#{$a} >.app:not(.active) > .app-title {
             font-size: 0.8 + (($a - 1) / 10 ) + em;
@@ -259,6 +412,14 @@ $default-glass-border-radius : nth($glass-border-radius-list, 4);
          .app-tray:not(.app-open).app-size-#{$a} >.app:not(.active):not(.app-square).glass:after {
                     border-top-left-radius: $glass-border-radius + px;
                     border-top-right-radius: $glass-border-radius + px;
+                    -webkit-border-top-left-radius: $glass-border-radius + px;
+                    -webkit-border-top-right-radius: $glass-border-radius + px;
+                    -moz-border-top-left-radius: $glass-border-radius + px;
+                    -moz-border-top-right-radius: $glass-border-radius + px;
+                    -o-border-top-left-radius: $glass-border-radius + px;
+                    -o-border-top-right-radius: $glass-border-radius + px;
+                    -ms-border-top-left-radius: $glass-border-radius + px;
+                    -ms-border-top-right-radius: $glass-border-radius + px;
                 }
         .app-tray:not(.app-open).app-size-#{$a} >.app:not(.active)> .app-header.app-icon { 
              line-height: $length-value + px;
@@ -403,6 +564,10 @@ $default-glass-border-radius : nth($glass-border-radius-list, 4);
      min-width: $length-value + px; 
      min-height: $length-value + px; 
      border-radius:$default-app-border-radius + px;
+     -webkit-border-radius:$default-app-border-radius + px;
+     -moz-border-radius:$default-app-border-radius + px;
+     -o-border-radius:$default-app-border-radius + px;
+     -ms-border-radius:$default-app-border-radius + px;
      position: relative;
      margin: $default-spacing + px;
         
@@ -428,6 +593,14 @@ $default-glass-border-radius : nth($glass-border-radius-list, 4);
     .app-tray:not(.app-open) >.app:not(.active):not(.app-square).glass:after{
                 border-top-left-radius: $default-glass-border-radius + px;
                 border-top-right-radius: $default-glass-border-radius + px;
+                -webkit-border-top-left-radius: $default-glass-border-radius + px;
+                -webkit-border-top-right-radius: $default-glass-border-radius + px;
+                -moz-border-top-left-radius: $default-glass-border-radius + px;
+                -moz-border-top-right-radius: $default-glass-border-radius + px;
+                -o-border-top-left-radius: $default-glass-border-radius + px;
+                -o-border-top-right-radius: $default-glass-border-radius + px;
+                -ms-border-top-left-radius: $default-glass-border-radius + px;
+                -ms-border-top-right-radius: $default-glass-border-radius + px;
             }
     .app-tray:not(.app-open) >.app:not(.active)> .app-header { 
      height:100%;
@@ -482,6 +655,10 @@ $default-glass-border-radius : nth($glass-border-radius-list, 4);
   min-width: $length-value + px;
              min-height: $length-value + px; 
              border-radius: $app-border-radius + px;
+             -webkit-border-radius: $app-border-radius + px;
+             -moz-border-radius: $app-border-radius + px;
+             -o-border-radius: $app-border-radius + px;
+             -ms-border-radius: $app-border-radius + px;
     }
     .app-tray:not(.app-open).app-size-auto#{$class-extention}{
             padding-bottom:  ($default-spacing - 5) + (2 * $i) + px;
@@ -492,6 +669,14 @@ $default-glass-border-radius : nth($glass-border-radius-list, 4);
       .app-tray:not(.app-open).app-size-auto#{$class-extention} >.app:not(.active):not(.app-square).glass:after {
                     border-top-left-radius: $glass-border-radius + px;
                     border-top-right-radius: $glass-border-radius + px;
+                    -webkit-border-top-left-radius: $glass-border-radius + px;
+                    -webkit-border-top-right-radius: $glass-border-radius + px;
+                    -moz-border-top-left-radius: $glass-border-radius + px;
+                    -moz-border-top-right-radius: $glass-border-radius + px;
+                    -o-border-top-left-radius: $glass-border-radius + px;
+                    -o-border-top-right-radius: $glass-border-radius + px;
+                    -ms-border-top-left-radius: $glass-border-radius + px;
+                    -ms-border-top-right-radius: $glass-border-radius + px;
                 }
 
 
